--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,19 @@
+/* Reset default browser margins and paddings */
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,19 +22,36 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: url('/public/image.png');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 200px;
+}
+
+.main {
+ 
   color: white;
+  padding: 10px;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.footer {
+  background-color: #3d6e7b;
+  color: white;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #3d6e7b;
 }
+
 
 @keyframes App-logo-spin {
   from {
