--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  background-color: #495E57;
-  color: #edefee;
+  background-color: #4a6b61;
+  color: #000000;
 }
 
 code {
