Sivutekstit ja -kuvat päivitetty

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ html, body {
 
 /* Header styling with a background image */
 .App-header {
-  background-image: url('/public/p18.jpg');
+  background-image: url('/public/banner.jpg');
   background-size: cover;
   background-position: center 55%;
   width: 100%;
